alignment fixes

--- a/src/app/loans/loans.component.css
+++ b/src/app/loans/loans.component.css
@@ -38,7 +38,7 @@
 }
 
 .icon-display{
-    margin-top: -10px;
+    margin-top: -3px;
 }
 
 .table-alignment{
