--- a/src/app/rawData/rawData.component.css
+++ b/src/app/rawData/rawData.component.css
@@ -15,7 +15,7 @@
 }
 
 .icon-display{
-    margin-top: -10px;
+    margin-top: -3px;
     margin-left: -20px;
 }
 
